@@ -72,6 +72,7 @@ import com.microsoft.identity.common.java.result.AcquireTokenResult;
 import com.microsoft.identity.common.java.result.GenerateShrResult;
 import com.microsoft.identity.common.java.result.LocalAuthenticationResult;
 import com.microsoft.identity.common.java.telemetry.TelemetryEventStrings;
+import com.microsoft.identity.common.java.util.ResultFuture;
 import com.microsoft.identity.common.java.util.ResultUtil;
 import com.microsoft.identity.common.java.util.ThreadUtils;
 import com.microsoft.identity.common.java.util.ported.PropertyBag;
@@ -92,6 +93,8 @@ public class LocalMSALController extends BaseController {
 
     @SuppressWarnings(WarningType.rawtype_warning)
     private IAuthorizationStrategy mAuthorizationStrategy = null;
+
+    private Future<AuthorizationResult> mAuthorizationFuture = null;
 
     @SuppressWarnings(WarningType.rawtype_warning)
     private AuthorizationRequest mAuthorizationRequest = null;
@@ -228,12 +231,17 @@ public class LocalMSALController extends BaseController {
         mAuthorizationRequest = getAuthorizationRequest(strategy, parameters);
 
         // Suppressing unchecked warnings due to casting of AuthorizationRequest to GenericAuthorizationRequest and AuthorizationStrategy to GenericAuthorizationStrategy in the arguments of call to requestAuthorization method
-        @SuppressWarnings(WarningType.unchecked_warning) final Future<AuthorizationResult> future = strategy.requestAuthorization(
+        mAuthorizationFuture = strategy.requestAuthorization(
                 mAuthorizationRequest,
                 mAuthorizationStrategy
         );
 
-        return future.get();
+        AuthorizationResult result = mAuthorizationFuture.get();
+
+        // Once we get the result, null the reference
+        mAuthorizationFuture = null;
+
+        return result;
     }
 
     @Override
@@ -253,7 +261,21 @@ public class LocalMSALController extends BaseController {
                         .put(TelemetryEventStrings.Key.REQUEST_CODE, String.valueOf(requestCode))
         );
 
-        mAuthorizationStrategy.completeAuthorization(requestCode, RawAuthorizationResult.fromPropertyBag(data));
+        try {
+            mAuthorizationStrategy.completeAuthorization(requestCode, RawAuthorizationResult.fromPropertyBag(data));
+        } catch (Exception e){
+            // Best effort
+            if (mAuthorizationFuture != null
+                    && mAuthorizationFuture instanceof ResultFuture
+                    && !mAuthorizationFuture.isDone()) {
+                // If the future is somehow initialized and waiting, give the future an exception
+                // Adjusting method signatures to get a ResultFuture back seems to have some unintended breaking change in MSAL
+                // so instead will use checked type casting.
+                ((ResultFuture<AuthorizationResult>) mAuthorizationFuture).setException(e);
+            } else {
+                throw e;
+            }
+        }
 
         Telemetry.emit(
                 new ApiEndEvent()
