@@ -1,5 +1,6 @@
 V.Next
 ---------
+- [PATCH] Handle Receiver Callback Exception in CommandDispatcher interactive command ()
 - [MINOR] Add flight to control silent token timeout (#2311)
 - [MINOR] Add IpcStrategyWithBackup (#2301)
 - [PATCH] Fix MSAL Issue 1864 (#2280)
